Add git submodule as Source