@@ -22,13 +22,10 @@
 				<version>3.8.1</version>
 				<configuration>
 					<!-- <source>1.8</source> -->
-					<release>15</release>
-					<compilerArgs>
-						--enable-preview
-					</compilerArgs>
+					<release>11</release>
 				</configuration>
 			</plugin>
-			<!--  The Maven-Surefire-Plugin is needed to make Unittests while building-->
+			<!-- The Maven-Surefire-Plugin is needed to make Unittests while building -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -37,6 +34,28 @@
 					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>lib/rentasad.library.logging/src/main/java/rentasad</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+
 		</plugins>
 	</build>
 	<dependencies>
@@ -47,18 +66,14 @@
 			<version>5.5.2</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.ini4j/ini4j 
-			HANDLING INI-FILE READ- AND WRITE
-		-->
+		<!-- https://mvnrepository.com/artifact/org.ini4j/ini4j HANDLING INI-FILE 
+			READ- AND WRITE -->
 		<dependency>
 			<groupId>org.ini4j</groupId>
 			<artifactId>ini4j</artifactId>
 			<version>0.5.4</version>
 		</dependency>
-		<dependency>
-			<groupId>rentasad</groupId>
-			<artifactId>rentasad.library.logging</artifactId>
-			<version>1.1.0</version>
-		</dependency>
+		<!-- <dependency> <groupId>rentasad</groupId> <artifactId>rentasad.library.logging</artifactId> 
+			<version>1.1.0</version> </dependency> -->
 	</dependencies>
 </project>
